# basemoji

./: README.md  basemoji.cabal  stack.yaml
app/: Main.hs
src/Data/Encoding/: Basemoji.hs
test/: Spec.hs
