name:                basemoji
version:             0.1.0.0
synopsis:            emoji-base58 encodings
description:         smile
homepage:            https://github.com/kejace/basemoji#readme
license:             BSD3
license-file:        LICENSE
author:              Kristoffer Josefsson
maintainer:          kejace@gmail.com
copyright:           2017 Kristoffer Josefsson
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Encoding.Basemoji 
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable basemoji
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , cryptonite
                     , basemoji
  default-language:    Haskell2010

test-suite basemoji-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , basemoji
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kejace/basemoji
